8178490: Usages of is_object_aligned with pointers are broken

Reviewed-by: tschatzl, kbarrett